kubernetes/services-sec.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgresql-client-service
  namespace: default
spec:
  selector:
    app: postgresql-client
  ports:
    - protocol: TCP
      port: 80
      targetPort: 4001
  type: ClusterIP
