kubernetes/ingress-sec.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: postgresql-clientsec-ingress
  namespace: default
spec:
  ingressClassName: nginx
  rules:
    - host: aiagent.elamaras.people.aws.dev  # Adjust the hostname as needed
      http:
        paths:
          - backend:
              service:
                name: postgresql-clientsec-service
                port:
                  number: 80
            path: /
            pathType: Prefix
